--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,23 @@
 {
   "manifest_version": 3,
-  "name": "Google Text-to-Speech",
+  "name": "Shabette",
   "description": "A Text-to-Speech service",
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "contextMenus",
+    "storage",
+    "offscreen"
+  ],  "host_permissions": [
+    "https://*.googleapis.com/",
+    "https://*.google.com/",
+    "https://*.gstatic.com/"
+  ],
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
-  },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
   },
   "icons": {
     "128": "icon-128.png"
