--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.299.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.1.1"
