--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.299.0",
+    "base64-js": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.1.1"
