--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shabette",
+  "type": "module",
   "version": "0.1.0",
   "description": "Text-to-Speech service",
   "license": "MIT",
@@ -8,9 +9,10 @@
     "url": "https://github.com/reedom/shabette.git"
   },
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'"
   },
   "dependencies": {
     "@aws-sdk/client-polly": "^3.299.0",
@@ -21,47 +23,15 @@
     "swr": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@types/chrome": "^0.0.202",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@vanilla-extract/webpack-plugin": "^2.2.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.2",
-    "babel-preset-react-app": "^10.0.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.31.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^11.1.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "prettier": "^2.8.3",
-    "react-refresh": "^0.14.0",
-    "react-refresh-typescript": "^2.0.7",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "source-map-loader": "^3.0.1",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-loader": "^9.4.2",
-    "type-fest": "^3.5.2",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "zip-webpack-plugin": "^4.0.1"
+    "@crxjs/vite-plugin": "^1.0.12",
+    "@types/chrome": "^0.0.227",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@vanilla-extract/css": "^1.11.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "glob": "^9.2.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.13"
   }
 }
