--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@vanilla-extract/css": "^1.11.0",
     "@vitejs/plugin-react": "^1.3.2",
     "glob": "^9.2.1",
+    "jsdom": "^21.1.1",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^2.9.13"
+    "vite": "^2.9.13",
+    "vitest": "^0.29.8"
   }
 }
